<resources>
    <string name="app_name">Car Pooling</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_fahrten">Fahrten</string>
    <string name="title_activity_add_anzeige">AddAnzeige</string>
    <string name="title_activity_anzeigen">Anzeigen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bestaetigung">Bestaetigung</string>
    <string name="title_activity_profil">Profil</string>
    <string name="keinKonto_EinloggenSeite">Wenn Sie haben kein Konto:</string>
    <string name="registrierung_button">REGISTRIERUNG</string>
    <string name="einloggen_button">EINLOGGEN</string>
    <string name="e_mail">E-Mail</string>
    <string name="vorname_hint">Vorname</string>
    <string name="nachname_hint">Nachname</string>
    <string name="gsm_hint">GSM</string>
    <string name="e_mail_hint">E-Mail</string>
    <string name="nochmal_password_hint">Nochmal Password</string>
    <string name="password_hint">Password</string>
    <string name="universitaet_mail">Universität Mail</string>
    <string name="fahrten">Fahrten</string>
    <string name="bestaetigung">Bestätigung</string>
    <string name="profil">Profil</string>
    <string name="suchanzeige">Suchanzeıge</string>
    <string name="anzeige_aufgeben">Anzeıge aufgeben</string>
    <string name="title_activity_anzeige">Anzeige</string>
    <string name="mein_profil_bearbeiten">MEIN PROFIL BEARBEITEN</string>
    <string name="restbestand">Restbestand:</string>
    <string name="saldenverarbeitung">Saldenverarbeitung</string>
    <string name="meine_fahrten">MEINE FAHRTEN</string>
    <string name="title_activity_registrierung_">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Can</string>
    <string name="datum">22.08.2019/00.00</string>
    <string name="ausgangspunkt">Ausgangspunkt:</string>
    <string name="ziel">Ziel:</string>
    <string name="anwenden">ANWENDEN</string>
    <string name="title_activity_anwenden">Anwenden</string>
    <string name="title_activity_detalierte_profil">DetalierteProfil</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_anzeige_map">Map</string>
    <string name="title_activity_add_map_start">Map</string>
    <string name="title_activity_add_map_ziel">Map</string>
    <string name="title_activity_map_anwenden">Map</string>
    <string name="title_activity_meine_anzeigen">MeineAnzeigen</string>
    <string name="title_activity_bestaetigung_detail">BestaetigungDetail</string>
    <string name="title_activity_bestatigung_map">Map</string>

</resources>
