<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_gri"
    android:layout_marginBottom="15dp"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="43dp"
        android:onClick="detalierteProfil"
        android:src="@drawable/pf"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="120dp"
        android:text="@string/datum"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Ausgangspunkt"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="22dp"
        android:text="@string/ausgangspunkt"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Ziel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="80dp"
        android:text="@string/ziel"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/buttonanwenden"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="275dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/apply"
        android:onClick="anwenden"/>



    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="15dp"

        app:srcCompat="@drawable/route" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="105dp"

        app:srcCompat="@drawable/ic_directions_car_red_24dp" />
</RelativeLayout>