<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Einloggen"
    android:background="@drawable/bckgrnd">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="308dp"

        android:layout_marginTop="210dp"

        android:layout_marginBottom="200dp"
        android:background="#ffffff">

        <EditText
            android:id="@+id/mailEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"


            android:layout_marginStart="76dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="72dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mailEdit"
            android:layout_alignStart="@+id/mailEdit"
            android:layout_alignEnd="@+id/mailEdit"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="1dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <Button
            android:id="@+id/eınloggenButton"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_below="@+id/passwordEdit"
            android:layout_alignStart="@+id/passwordEdit"
            android:layout_alignEnd="@+id/passwordEdit"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/tau_gradient_bckgrnd"
            android:onClick="einloggen"
            android:text="@string/einloggen_button" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eınloggenButton"
            android:layout_alignStart="@+id/eınloggenButton"
            android:layout_marginStart="0dp"
            android:layout_marginTop="14dp"
            android:text="@string/keinKonto_EinloggenSeite" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/textView3"
            android:onClick="registrieren"
            android:text="Registrieren"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
    </RelativeLayout>

</RelativeLayout>