<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAnzeige"
    android:background="@drawable/background_app_gri">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:menu="@menu/navigation"
        app:itemIconTint="#000000"
        app:itemTextColor="#000000"/>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ausgangspunkt"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/ziel"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/datum"
            android:layout_marginTop="90dp"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="Erklärung:"
            android:layout_marginTop="130dp"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/editErklaerung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:text="" />

        <EditText
            android:id="@+id/editAusgang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:maxLines="1"
            android:hint="@string/ausgangspunkt"
            />
        <EditText
            android:id="@+id/editZiel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:maxLines="1"
            android:hint="@string/ziel"
            />
        <EditText
            android:id="@+id/editDatum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:maxLines="1"
            android:hint="@string/datum"
            />

        <Button
            android:id="@+id/weiter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/black_button"
            android:onClick="weiter"
            android:text="WEITER"
            android:textColor="#ffffff" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="240dp"
            android:checked="false"
            android:onClick="switch_buton"
            android:text="Mit dem Auto   " />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>